--- a/my-portfolio/port.html
+++ b/my-portfolio/port.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-       <header class="header">
+       <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="banner">
-                <div class="banneer-content">
+                <div class="banner-content">
                     <h4 class="banner-greetings list-content">Hi, I am</h4>
                     <h1 class="banner-title">Mary Hardy</h1>
                     <p class="banner-description list-content">
@@ -31,10 +31,52 @@
                 <button class="btn-primary">Download CV</button>
                   <button class="btn-primary">Contact</button>
 
-                </div>
-                <img class="banner-profile" src="marypics.JPG">
+                </div>-
+                <img class="banner-profile" src="portfolio-resources/images/hardy.png">
         </div>
-    </header>
+        </header>
+        <main>
+            <section class="about secondary-bg">
+                <h3 class="section-title">About Me</h3>
+                <p class="section-description">I, m a designer & developer with a passion for web design. 
+                    I enjoy developing simple,clean and slick websites that provide real value to the end user.
+                     Thousands of clients have procured exceptional resulfs while working with me.
+                     Delivering work within time and budget which meets clients requirements in our mata.</p>
+                     <div class="about-items">
+                <div class="about-item">
+                    <p class="item-titile">Name:</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-titile">Email:</p>
+                    <p class="item-description">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-titile">Date of birth:</p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-titile">From:</p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>
+
+            </div>
+            </section>
+        </main>
+    
+    <main>
+
+
+
+
+
+    </main>
+    <footer>
+
+
+
+
+    </footer>
     
 </body>
 </html>
