--- a/Assignment-1/assn.html
+++ b/Assignment-1/assn.html
@@ -29,6 +29,26 @@
             </div> 
             <img src="B12A01-landing-launchpad/Assets/wc-big.png" alt="nothing">
         </section>
+
+        <section class="main-section">
+            <h3 class="section-head">Joined Thousands of Productive Users</h3>
+            <div class="logo-part">
+                <div class="logor-bap">
+                    <h1 class="logo-title">50K</h1>
+                    <p class="logo-subsittle">Active Users</p>
+                </div>
+                 <div class="logor-bap">
+                    <h1 class="logo-title">2M+</h1>
+                    <p class="logo-subsittle">Focus Sessions</p>
+                </div>
+
+                 <div class="logor-bap">
+                    <h1 class="logo-title">95%</h1>
+                    <p class="logo-subsittle">Satisfaction Rate</p>
+                </div>
+            </div>
+        </section>
+        
     </main>
 </body>
 </html>
